2005-03-12  John Luke  <john.luke@gmail.com>

	* Makefile.am: use MonoDevelop.Dock.dll
	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	minor API changes for C# version of dock

2005-03-11  Lluis Sanchez Gual <lluis@novell.com>

	* Internal/Project/Combine/Combine.cs: Fixed wrong event subscriptions.

2005-03-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/Project/ProjectService.cs: Search for new files after the
	whole combine has been loaded.
	* Internal/Project/Project/Project.cs: Don't show the include file
	dialog because it doesn't work. It will work with the new solution
	pad. All this partially fixes bug #71688.

2005-03-10  Todd Berman  <tberman@off.net>

	* Gui/Dialogs/SplashScreen.cs: Use an alignment, not labels.

2005-03-10	Christian Hergert	<christian.hergert@gmail.com>

	* Gui/Dialogs/SplashScreen.cs: Add progress bar with status
	message support. Will help users with slow initial startup
	times.

2005-03-09  John Luke  <john.luke@gmail.com>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	remove toolbarContainer that was causing an assertion
	and was no longer used

2005-03-08  Todd Berman  <tberman@off.net>

	* Gui/AbstractViewContent.cs: only emit an event when the name
	actually changes.

2005-03-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/MenuItemBuilders.cs: Added null check.
	
	* Services/MenuService/MenuService.cs: Added new ShowContextMenu
	method.
	* Services/Tasks/OutputProgressMonitor.cs: Fixed namespace.
	* Services/Tasks/TaskService.cs: The id of output pads are now
	like "OutputPad1".
	
	* Services/Project/IProjectService.cs,
	* Services/Project/ProjectService.cs: Added FileRenamedInProject event.
	  
	* Services/ParserService/ClassInformationEventHandler.cs: Added a
	Project property to ClassInformationEventArgs.
	
	* Services/ParserService/ProjectCodeCompletionDatabase.cs: Handle the
	new FileRenamedInProject event.
	
	* Services/ParserService/DefaultParserService.cs,